[package]
name = "prom-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bson = { version = "2.11.0", features = ["chrono"] }
chrono = { version = "0.4.38", features = ["serde"] }
directories = "5.0.1"
once_cell = "1.19.0"
prom-data = { version = "0.1.0", path = "../data" }
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
